# EEG-GAN

./: .gitignore  3c_training_main.py  404.html  EEG-DDPM.py  EEG-VAE.py  ERPCORE_model_training_guide.txt  ERPCORE_training_guide.txt  EmbeddingNet.py  LICENSE  LICENSE.md  README.md  Tutorial_GAN.ipynb  ae_main.py  ae_visualize_main.py  antisaccade_training_guide.txt  autoencoder_training_main.py  channelrecovery.py  checkpoint_to_csv.py  classifier_training_main.py  compare_averaged_conditions.py  cwgan.py  data_downsampling.py  dataloader.py  ddp_main.py  ddp_training.py  ddp_training_classifier.py  ganEEG_Classification.py  gan_classifier_training_main.py  gan_training_main.py  generate_samples.py  generate_samples_main.py  get_gan_config.py  gpu_batch.sh  help_inputs.py  index.html  losses.py  main.py  mkdocs.yml  models.py  plotting_ae.py  (+15 more)
EEG Processing/: extractERP.m  extractElectrodesERP.m
EEG-GAN/: 3c_training_main.py  gan_training_main.py  generate_samples_main.py  get_gan_config.py  requirements.txt  visualize_main.py
auxiliary/: checkpoint_to_csv.py  compare_averaged_conditions.py  create_averaged_erps.py  data_downsampling.py  data_split.py  get_critic_scores.py
classification/: ae_gansEEG_Classification.py  classification_functions.py  classification_plot_functions.py  gansEEG_Classification.py  gansEEG_Classification_BarPlot.ipynb  gansEEG_Classification_Plot.py  gansEEG_Classification_multielectrode.py  gansEEG_Classification_original.py  gansEEG_Classification_scaletest.py  main_Classification_Plot.py  main_barplots.py  main_classification_bootstrap.py  main_interactive_classification_plot.ipynb  main_plot_functions.py
classification_script/: gansEEG_ExtractSampleSizeData.py
data/: eeggan_build_augmented_datasets.py  ganAverageERP_len100.csv  ganAverageERP_mini.csv  ganTrialElectrodeERP_p50_e8_len100_SHORT.csv  gansEEGTrainingData.csv  gansEEGTrainingData_SHORT.csv  gansEEG_ExtractSampleSizeData.py  gansMultiCondition.csv  gansMultiCondition_SHORT.csv
docs/: index.md
eeggan/: 3c_training_main.py  Generate_Samples.py  Load_Tutorial_File.py  Setup_Tutorial.py  Train_Gan.py  Visualize_Gan.py  __init__.py  __main__.py  autoencoder_training_main.py  classifier_training_main.py  gan_training_main.py  generate_samples.py  generate_samples_main.py  get_gan_config.py  load_file.py  setup_tutorial_main.py  train_gan.py  vae_training_main.py  visualize_gan.py  visualize_main.py
evaluation/: gansEEG_Qualitative_Evaluation.ipynb  gansEEG_Qualitative_Evaluation.py  main_Qualitative_Evaluation.py  main_Qualitative_Evaluation_ERP.py  main_Qualitative_Evaluation_FFT.py  main_Qualitative_Evaluation_TFT.py  main_Qualtitative_Corr_Evaluation.py  main_Quantitative_Evaluation.py  main_Quantitative_Evaluation_Report.py  quantitative_evaluation_results.csv
generated_samples/: embedding_samples_20220910_110526.csv  (+1 more)
(+720 files in other folders)
