[project]
name = "eeggan"
version = "0.0.13"
authors = [
  { name="Sebastian Musslick, Daniel Weinhardt, & Chad Williams", email="sebastian_musslick@brown.edu" },
]
description = "This package uses Generative Adversarial Networks (GANs) to augment EEG data to enhance classification performance."
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "pandas~=1.3.4",
  "numpy~=1.23.1",
  "matplotlib~=3.5.0",
  "scipy~=1.8.0",
  "torch~=1.12.1",
  "torchvision~=0.13.1",
  "torchtext~=0.13.1",
  "einops~=0.4.1",
  "torchsummary~=1.5.1",
  "torchaudio~=0.12.1",
  "scikit-learn~=1.1.2"
]

[project.urls]
"Homepage" = "https://musslick.github.io/AER_website/Research.html"
"Repository" = "https://github.com/AutoResearch/EEG-GAN"
"Documentation" = "https://autoresearch.github.io/EEG-GAN/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"