[project]
name = "eeggan"
version = "2.0.0"
authors = [
  { name="Autonomous Empirical Research Group", email="sebastian_musslick@brown.edu" },
]
description = "This package uses Generative Adversarial Networks (GANs) to augment EEG data to enhance classification performance."
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "torch~=2.4.1",
  "torchvision~=0.19.0",
  "torchaudio~=2.4.0",
  "torchsummary~=1.5.1",
  "pandas~=1.3.4",
  "numpy~=1.21.4",
  "matplotlib~=3.5.0",
  "scipy~=1.8.0",
  "einops~=0.4.1",
  "scikit-learn~=1.1.2",
  "tqdm~=4.66.1"
]

[project.urls]
"Homepage" = "https://musslick.github.io/AER_website/Research.html"
"Repository" = "https://github.com/AutoResearch/EEG-GAN"
"Documentation" = "https://autoresearch.github.io/EEG-GAN/"

[project.scripts]
"eeggan" = "eeggan.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"