[project]
name = "eeggan"
version = "2.0.2"
authors = [
  { name="Autonomous Empirical Research Group", email="sebastian_musslick@brown.edu" },
]
description = "This package uses Generative Adversarial Networks (GANs) to augment EEG data to enhance classification performance."
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "torch>=2.3,<2.4",
  "torchvision>=0.18,<0.19",
  "torchaudio>=2.3,<2.4",
  "torchsummary>=1.5,<1.6",
  "pandas>=2.2,<2.3",
  "numpy>=1.24,<2.0",
  "matplotlib>=3.5,<4.0",
  "scipy>=1.8,<2.0",
  "einops>=0.4,<0.5",
  "scikit-learn>=1.1,<2.0",
  "tqdm>=4.66,<5.0"
]

[project.urls]
"Homepage" = "https://musslick.github.io/AER_website/Research.html"
"Repository" = "https://github.com/AutoResearch/EEG-GAN"
"Documentation" = "https://autoresearch.github.io/EEG-GAN/"

[project.scripts]
"eeggan" = "eeggan.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"